# analysis-of-algorithms

./: .gitignore  readme.md
lab_01/: CMakeLists.txt  readme.md  report.out  report.tex
lab_01/include/: DLmatrix.h  DLrecursive.h  Lmatrix.h
lab_01/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  preamble.tex  research.tex  technological.tex  title.tex
lab_01/source/: CoutVector.cc  DLmatrix.cc  DLrecursive.cc  Lmatrix.cc  main.cc
lab_01/src/: readme.md
lab_01/src/include/: CoutVector.h  Matrix.h
lab_01/src/source/: DLmatrix.cc  main.cc
lab_02/: readme.md  report.tex
lab_02/include/: DefaultMultiplication.h  Matrix.h
lab_02/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  research.tex  technological.tex  title.tex
lab_02/source/: DefaultMultiplication.cc  Matrix.cc  VinogradMultiplication.cc  main.cc
lab_02/src/: CMakeLists.txt  readme.md
lab_02/src/include/: ModifiedVinogradMultiplication.h  VinogradMultiplication.h
lab_02/src/source/: ModifiedVinogradMultiplication.cc
lab_03/: CMakeLists.txt  readme.md  report.tex
lab_03/include/: BubbleSort.h  CoutVector.h  QSort.h
lab_03/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  preamble.tex  research.tex  technological.tex  title.tex
lab_03/source/: BubbleSort.hpp  CoutVector.hpp  main.cc
lab_03/src/: readme.md
lab_03/src/include/: ShakerSort.h
lab_03/src/source/: QSort.hpp  ShakerSort.hpp  main.cc
lab_04/: CMakeLists.txt  readme.md  report.tex
lab_04/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  preamble.tex  report.tex  research.tex  technological.tex  title.tex
lab_04/source/: ThreadMultiplication.cc  main.cc
lab_04/src/: readme.md
lab_04/src/include/: ThreadMultiplication.h
lab_05/: readme.md  report.tex
lab_05/include/: Conveyor.h  Multiplication.h
lab_05/input/: 1.txt  100.txt
lab_05/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  research.tex  technological.tex  title.tex
lab_05/source/: Conveyor.cc  main.cc
lab_05/src/: CMakeLists.txt  readme.md
lab_05/src/input/: generate.py
lab_05/src/source/: Multiplication.cc
lab_06/: CMakeLists.txt  readme.md  report.tex
lab_06/include/: FullSearch.h  Matrix.h  Matrix.hpp
lab_06/input/: 10.txt  3.txt  4.txt  5.txt  8.txt  generate.py
lab_06/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  research.tex  technological.tex  title.tex
lab_06/source/: FullSearch.cc  main.cc
lab_06/src/: readme.md
lab_06/src/include/: AntSearch.h
lab_06/src/input/: 2.txt
lab_06/src/source/: AntSearch.cc
lab_07/: report.tex
lab_07/img/: boiler_myr.graphml
lab_07/include/: BoilerMyr.h
lab_07/report/: analysis.tex  bib.tex  conclusion.tex  design.tex  introduction.tex  preamble.tex  research.tex  technological.tex  title.tex
lab_07/source/: BoilerMyr.cc  KnuthMorrisPratt.cc  main.cc
lab_07/src/: CMakeLists.txt  readme.md
lab_07/src/include/: KnuthMorrisPratt.h
lab_07/src/source/: KnuthMorrisPratt.cc
